--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 Django==1.6.5
+SPARQLWrapper==1.6.2
 argparse==1.2.1
-distribute==0.6.24
 dj-database-url==0.3.0
-dj-static==0.0.5
+dj-static==0.0.6
 django-toolbelt==0.0.1
 gunicorn==19.0.0
+html5lib==0.999
+isodate==0.5.0
+laconia==0.0.0
 psycopg2==2.5.3
-pystache==0.5.4
-static==1.0.2
+pyparsing==2.0.2
+rdflib==4.1.2
+six==1.7.3
+static3==0.5.1
 wsgiref==0.1.2
