--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 Django==1.6.5
 SPARQLWrapper==1.6.2
 argparse==1.2.1
+behave==1.2.4
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-behave==0.1.2
 django-toolbelt==0.0.1
+enum34==1.0
 gunicorn==19.0.0
 html5lib==0.999
 isodate==0.5.0
 laconia==0.0.0
+parse==1.6.4
+parse-type==0.3.4
 psycopg2==2.5.3
 pyparsing==2.0.2
 rdflib==4.1.2
+selenium==2.42.1
 six==1.7.3
+splinter==0.6.0
 static3==0.5.1
 wsgiref==0.1.2
