--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ django-behave==0.1.2
 django-lazysignup==0.12.2
 splinter==0.6.0
 httpretty==0.8.3
+-e git+git://github.com/avengerpenguin/hyperspace#egg=hyperspace
