--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 django-toolbelt==0.0.1
 Django==1.6.5
 behave==1.2.4
-laconia==0.0.0
+laconia==0.1.0
 django-behave==0.1.2
-django-lazysignup==0.12.2
-splinter==0.6.0
 -e git+git://github.com/avengerpenguin/hyperspace#egg=hyperspace
 PyHamcrest==1.8.0
 mechanize==0.2.5
 django12factor==1.1
 django-allauth==0.18.0
+django-session-stashable==1.0
+honcho==0.5.0
