--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 DEBUG=True
 ALLOWED_HOSTS=*
 SECRET_KEY=abc
-http_proxy=http://localhost:5000
+DJANGO_SETTINGS_MODULE=doyoulikeit.settings
+DATABASE_URL=sqlite:////tmp/dyli.db
