Fairly big overhaul of testing to use pytest more for unit tests before getting into the acceptance test side of things.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
 django-toolbelt==0.0.1
 Django==1.6.5
-behave==1.2.4
-laconia==0.2.1
-django-behave==0.1.2
+laconia==0.2.12
 django-lazysignup==0.12.2
-splinter==0.6.0
 hyperspace==0.0.5
-PyHamcrest==1.8.0
-mechanize==0.2.5
 django12factor==1.1
 django-allauth==0.18.0
-testypie==0.3.3
+testypie==0.4.0
 django-session-stashable==1.0
-honcho==0.5.0
 httplib2==0.9
+gunicorn==19.2.1
