--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ anyio==4.9.0
     # via httpx
 asyncpg==0.30.0
     # via quart-db
+authlib==1.5.2
+    # via quart-authlib
 blinker==1.9.0
     # via
     #   flask
@@ -23,6 +25,8 @@ certifi==2025.1.31
     #   httpcore
     #   httpx
     #   requests
+cffi==1.17.1
+    # via cryptography
 charset-normalizer==3.4.1
     # via requests
 click==8.1.8
@@ -30,6 +34,8 @@ click==8.1.8
     #   flask
     #   quart
     #   uvicorn
+cryptography==44.0.2
+    # via authlib
 docker==7.1.0
     # via testcontainers
 flask==3.1.0
@@ -109,6 +115,8 @@ packaging==24.2
     #   langsmith
 priority==2.0.0
     # via hypercorn
+pycparser==2.22
+    # via cffi
 pydantic==2.10.6
     # via
     #   langchain
@@ -130,7 +138,10 @@ pyyaml==6.0.2
 quart==0.20.0
     # via
     #   -r requirements.in
+    #   quart-authlib
     #   quart-db
+quart-authlib==0.0.3
+    # via -r requirements.in
 quart-db==0.9.0
     # via -r requirements.in
 rdflib==7.1.3
@@ -140,6 +151,7 @@ requests==2.32.3
     #   docker
     #   langchain
     #   langsmith
+    #   quart-authlib
     #   requests-toolbelt
 requests-toolbelt==1.0.0
     # via langsmith
@@ -148,7 +160,9 @@ sniffio==1.3.1
 sqlalchemy==2.0.39
     # via langchain
 tenacity==9.0.0
-    # via langchain-core
+    # via
+    #   -r requirements.in
+    #   langchain-core
 testcontainers==4.9.2
     # via -r requirements.in
 tqdm==4.67.1
