Move to proper domain

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,9 @@
-layout python3
+layout python python3.13
 ln -sfn .direnv/$(basename $VIRTUAL_ENV)/ venv
+
+export QUART_APP=doyoulikeit:app
+export QUART_DEBUG=true
+export SECRET_KEY=$(openssl rand -hex 32)
+
+export AUTH0_CLI_LOGIN=true
+export AUTH0_DOMAIN='dev-zy4wj5zc3ka4savt.uk.auth0.com'
