--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+name: Deploy to Scaleway
+
 on:
   workflow_dispatch:
   push:
@@ -9,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     - name: Login to Scaleway Container Registry
       uses: docker/login-action@v3
       with:
