--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,16 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
+      - name: Use CLI
+        uses: scaleway/action-scw@v0
+        with:
+          save-config: true
+          export-config: true
+          version: v2.24.0
+          access-key: ${{ secrets.SCALEWAY_ACCESS_KEY }}
+          secret-key: ${{ secrets.SCALEWAY_API_KEY }}
+          default-project-id: 64bf8246-2474-4481-ac41-1733af2f1f45
+          default-organization-id: 64bf8246-2474-4481-ac41-1733af2f1f45
       - uses: actions/checkout@v4
       - uses: opentofu/setup-opentofu@v1
 
