--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,13 +47,13 @@ jobs:
           default-project-id: 64bf8246-2474-4481-ac41-1733af2f1f45
           default-organization-id: 64bf8246-2474-4481-ac41-1733af2f1f45
 
-      - run: tofu -chdir=infra init
+      - run: tofu -chdir=infra init -backend-config="profile="
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.SCALEWAY_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.SCALEWAY_API_KEY }}
 
       - id: plan
-        run: tofu -chdir=infra plan -no-color -var "docker_tag=${{ github.run_number }}-${{ github.sha }}"
+        run: tofu -chdir=infra plan -backend-config="profile=" -no-color -var "docker_tag=${{ github.run_number }}-${{ github.sha }}"
 
       - run: echo ${{ steps.plan.outputs.stdout }}
       - run: echo ${{ steps.plan.outputs.stderr }}
